--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,14 @@
 plugins {
     id 'java'
+    id 'application'
+    id 'org.openjfx.javafxplugin' version "0.0.8"
 }
 
 group 'swe.class'
 version '0.1'
 
-sourceCompatibility = 1.8
+sourceCompatibility = 1.13
+mainClassName = "$moduleName/swe.launch.App"
 
 repositories {
     mavenCentral()
@@ -13,4 +16,8 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+}
+
+javafx {
+    modules = [ 'javafx.controls', 'javafx.fxml' ]
 }
